--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sandipbhattacharya.weatherupdate">
+    package="com.swapnil.weatherapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,22 +13,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
         android:networkSecurityConfig="@xml/network_security_config">
-        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713
-         Replace this with your app ID.
-         Source: https://developers.google.com/admob/android/quick-start
-          -->
+
+        <!-- Meta-data for AdMob -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
+
+        <!-- SplashActivity as the launcher activity -->
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- MainActivity for fetching weather data -->
+        <activity
+            android:name="com.swapnil.weatherapp.MainActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
